# Efficient-rendering-of-SPH-based-fluid-simulations

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/: app.aps  reformat.py
shaders/: blurShader.frag  blurShader.vert  compile.bat  quadShader.frag  quadShader.vert  shader.comp  shader.frag  shader.vert
shaders/compiled/: blurFrag.spv  blurVert.spv  comp.spv  frag.spv  quadFrag.spv  quadVert.spv  tmp.txt  vert.spv
src/: FluidSimulationEnvironment.cpp  FluidSimulationEnvironment.h  Logger.cpp  Logger.h  main.cpp
src/Logger/: Logger.h
src/Vulkan/: FluidInstance.cpp  FluidInstance.h
src/Vulkan/BufferManager/: BufferManager.cpp  BufferManager.h
src/Vulkan/CommandPool/: CommandPoolManager.cpp  CommandPoolManager.h
src/Vulkan/DescriptorManager/: DescriptorManager.cpp  DescriptorManager.h
src/Vulkan/DeviceManager/: DeviceManager.cpp  DeviceManager.h
src/Vulkan/PipelineManager/: Pipeline.cpp  Pipeline.h  PipelineManager.cpp  PipelineManager.h
src/Vulkan/Render/: ImGuiRender.cpp  ImGuiRender.h  Render.cpp  Render.h
src/Vulkan/SwapchainManager/: Image.cpp  Image.h  SwapchainManager.cpp  SwapchainManager.h  TexCube.cpp  TexCube.h
src/Vulkan/Uniform/: Uniform.cpp  Uniform.h
src/Vulkan/Uniform/Structs/: Attributes.h  BlurSettings.h  MVP.h  Model.h  Transformations.h  UniformData.h  ViewMode.h
src/Vulkan/Utils/: Utils.cpp  Utils.h
src/Vulkan/Utils/Structs/: Attributes.h  DepthStencilOptions.h  ImVecUtils.h  InputState.h  Model.h  Particle.h  PushConstans.h  PushConstants.h  Quad.h  QueueFamilyIndices.h  SwapChainSupportDetails.h  Transformations.h  UniformBufferObject.h  UniformData.h
src/Vulkan/Utils/Structs/PushConstants/: BlurStageConstant.h  ComputeStageConstant.h  QuadStageConstant.h  SimulationStageConstant.h
src/Vulkan/Utils/Structs/Uniforms/: BlurSettings.h  Model.h  UniformData.h  ViewMode.h
src/Vulkan/VulkanObject/: VulkanObject.cpp  VulkanObject.h
src/Vulkan/Window/: Window.cpp  Window.h
